// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be able to generate a multiple static url 1`] = `
Array [
  "",
  "test",
]
`;

exports[`should be able to generate a single url 1`] = `
Array [
  "",
]
`;

exports[`should be able to get urls from the static method 1`] = `
Array [
  "",
  "test/1",
  "test/2",
  "test/3",
]
`;
